Changes in 3.2.1 :
- Resort torrents if display name is changed
- Fix bug causing torrents to get stuck when data checking and move to completed dir are done when a torrent has finished
- Fix sorting of time left column (185284)

Changes in 3.2 :
- Use QDir to create directories, avoids nested event loops, which seems to be buggy in some situations (182327)
- Make sure strings tab is shown first in filter editor dialog
- Fix bug causing torrent to get stalled at startup in some rare situations
- Fix crash at exit
- Fix bug causing problems when multiple fileselect dialogs were shown at the same time (183078)
- Fix bug causing not all tracker groups to get removed when tracker_groups.py is unloaded
- Fix crash when removing the only torrent of a tracker based group (183413)
- Make sure that when a chunk is downloaded via a webseed the chunkmanager is updated
- Don't throw away data when webseed connection closes
- Make sure plasma dataengine interprets strings passed via the stats dbus call, properly (183695)
- Limit group names in tabs to 35 characters, if longer use ... (183689)
- Fix bug causing trackers to be retried continuously when hostname can not be resolved because the network isn't up yet (183697, 183699)
- Fix bug with downloading the same episode twice or more in the syndication plugin

Changes in 3.2rc1 :
- Fix bug in webgui causing wrong content-length to be returned in some cases
- Add cmake check for libtaskmanager which is needed by the plasma applet
- Make sure ratio limit and seed time limit spinboxes in statustab only emit the valueChanged signal when the user is done editing the spinbox (175625)
- Don't show error message when torrent is loaded silently and the files can't be created (ported from stable)
- Fix crash in plasma applet
- Added select all action, manual announce now gets SHIFT + A as shortcut to not conflict with select all 
- Make sure average download speed calculation doesn't wrap around (175747)